--- a/WUP_LinearModel.Rmd
+++ b/WUP_LinearModel.Rmd
@@ -63,8 +63,41 @@ new <- data.frame(ARM = 88, GRIP = 94)
 predict (model.1, new, interval = "prediction", level = .95)
 ```
 
-
 # SIMS~GRIP
+
+### ggplot 
+
+```{r}
+basicNN <- ggplot(data,aes(y=SIMS,x=GRIP))
+```
+  
+### scatterplot
+
+```{r}
+basicNN + geom_point() + geom_smooth(method=lm)
+```  
+  
+### Numerical results
+
+```{r}
+cor(SIMS~GRIP,data=data)
+``` 
+
+### Inferential  (Build linear model)
+  
+```{r}
+model.2 <- lm(SIMS~GRIP,data=data)
+summary.lm(model.2)
+```
+
+The line equation is SIMS = 4.81 + .05*GRIP.  
+The model suggest that r-squared is .405 and another metric, the residual standard error, is 1.295.
+
+### Preductions
+
+```{r}
+predict (model.2, new, interval = "prediction", level = .95)
+```
   
 # SIMS~ARM+GRIP
   
