--- a/WUP_LinearModel.Rmd
+++ b/WUP_LinearModel.Rmd
@@ -100,5 +100,38 @@ predict (model.2, new, interval = "prediction", level = .95)
 ```
   
 # SIMS~ARM+GRIP
+
+### ggplot 
+
+```{r}
+basicNN <- ggplot(data,aes(y=SIMS,x=ARM+GRIP))
+```
+  
+### Numerical results
+
+```{r}
+cor(SIMS~ARM+GRIP,data=data)
+``` 
+
+### Inferential  (Build linear model)
+  
+```{r}
+model.3 <- lm(SIMS~ARM+GRIP,data=data)
+summary.lm(model.3)
+```
+
+The line equation is SIMS = -5.4 + .037 * ARM + 0.02 * GRIP 
+The model suggest that r-squared is .536 and another metric, the residual standard error, is 1.144.
+
+### Preductions
+
+```{r}
+new <- data.frame(ARM = 88, GRIP = 94)
+```
+
+```{r}
+predict (model.3, new, interval = "prediction", level = .95)
+```
+  
   
 # Compare Model1 with Model3
