--- a/WUP_LinearModel.Rmd
+++ b/WUP_LinearModel.Rmd
@@ -121,7 +121,7 @@ summary.lm(model.3)
 ```
 
 The line equation is SIMS = -5.4 + .037 * ARM + 0.02 * GRIP 
-The model suggest that r-squared is .536 and another metric, the residual standard error, is 1.144.
+The model suggest that r-squared is .536 and another metric, the residual standard error, is 1.144. This model is better the other two, because its residual standard error is smaller and the adjusted r-squared is bigger than both. 
 
 ### Preductions
 
@@ -133,5 +133,30 @@ new <- data.frame(ARM = 88, GRIP = 94)
 predict (model.3, new, interval = "prediction", level = .95)
 ```
   
-  
 # Compare Model1 with Model3
+
+### ANOVA
+
+### Model1 vs Model2
+
+```{r}
+anova(model.1,model.2)
+```
+
+ANOVA didn't work this time, because model 1 and model 2 are not nested.
+
+### Model1 vs Model3
+
+```{r}
+anova(model.1,model.3)
+```
+
+The p-value is 0.000004 is very low. So, that means there is a significant difference between the two models. That difference is 29.45, which is significant. Model 2, with ARM and GRIP, is better than the model with just the ARM.
+
+### Medel2 vs Model3
+
+```{r}
+anova(model.2,model.3)
+```
+
+The p-value is smaller than the previous and is very significant. The difference between the two models is 54, yet with another significant result. 
